--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons' rel="stylesheet" type="text/css">
   </head>
   <body>
-    <script>
+    <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
+    <script type="text/javascript">
+       (function(){
+          emailjs.init("user_cTZCs0tmcLj73EadXgDXa");
+       })();
     </script>
     <div id="app"></div>
     <!-- built files will be auto injected -->
